k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: prod-cas-frontend1:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend
# spec:
#   type: NodePort
#   ports:
#   - protocol: TCP
#     port: 3000
#     targetPort: 3000
#     nodePort: 30082 # Optional. Defaults to a random port if not set.
#   selector:
#     app: frontend
