k8s/kafdrop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop:latest
        ports:
        - containerPort: 9000
---
kind: Service
apiVersion: v1
metadata:
  name: kafdrop-svc
spec:
  type: LoadBalancer
  selector:
    app: kafdrop
  ports:
    - port: 9000
      targetPort: 9000
