k8s/postgis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgis
  template:
    metadata:
      labels:
        app: postgis
    spec:
      containers:
      - name: postgis
        image: postgis/postgis
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgis-data
          mountPath: /var/lib/postgresql/data
        - name: init-sql-volume
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
      volumes:
      - name: postgis-data
        persistentVolumeClaim:
          claimName: postgis-data-pvc
      - name: init-sql-volume
        configMap:
          name: postgis-init-config
---
apiVersion: v1
kind: Service
metadata:
  name: postgis
spec:
  selector:
    app: postgis
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
